Update sre-how-to.md